<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="text1">Text1</string>
    <string name="text2">Text2</string>


    <!--main-->
    <string name="title">Welcome to GO Android!</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="id_desc">아이디를 입력하세요.(6~10자)</string>
    <string name="pw_desc">비밀번호를 입력하세요.(8~12자)</string>

    <!--signup-->
    <string name="signup_finish">회원가입 완료</string>
    <string name="name">이름</string>
    <string name="forte">특기</string>
    <string name="name_desc">이름을 입력하세요.</string>
    <string name="forte_desc">특기를 입력하세요.</string>

    <!--mypage-->
    <string name="name_mypage">이름 : </string>
    <string name="forte_mypage">특기 : </string>
    <string name="logout">로그아웃</string>

    <!--home-->
    <string name="home_title">github repo</string>
    <string name="home_repo">레포지토리명</string>
    <string name="home_author">저자</string>

</resources>