<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.android.go.sopt.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signup.SignUpActivity">

        <TextView
            android:id="@+id/tv_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:text="@string/signup"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_signup_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/id"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_signup_id_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_signup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_desc"
                android:imeOptions="actionNext"
                android:text="@={viewModel.id}"
                android:textColor="@color/grey_800" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_signup_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/pw"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_signup_id_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_signup_pw_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_pw">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_signup_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pw_desc"
                android:imeOptions="actionNext"
                android:text="@={viewModel.pw}"
                android:textColor="@color/grey_800" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_signup_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/name"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_signup_pw_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_signup_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pw_desc"
                android:imeOptions="actionNext"
                android:text="@={viewModel.name}"
                android:textColor="@color/grey_800" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_signup_forte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/forte"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_signup_name_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_signup_forte_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_forte">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_signup_forte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pw_desc"
                android:imeOptions="actionNext"
                android:text="@={viewModel.forte}"
                android:textColor="@color/grey_800" />

        </com.google.android.material.textfield.TextInputLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/purple"
            android:inputType="text"
            android:text="@string/signup_finish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_signup_forte_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>